# pickle-queue

./: MANIFEST.in  README.md  pyproject.toml  setup.py
pickle_queue/: __init__.py  queue.py
