[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickle-queue"
version = "1.0.0"
description = "A queue implementation using pickle serialization with file locking"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "filelock",
]

[project.urls]
"Homepage" = "https://github.com/seaspaceman/pickle-queue"
"Bug Reports" = "https://github.com/seaspaceman/pickle-queue/issues"
"Source" = "https://github.com/seaspaceman/pickle-queue"

[tool.setuptools.packages.find]
where = ["."]
include = ["pickle_queue*"]
